frontend/src/pages/Home.scss
@import "../shared/shared.scss";

$banner-height: 500px;
$header-color: rgb(12, 0, 78);
$hub-header-color: #627edb;

.banner-root {
    min-width: $page-width;
    height: $banner-height;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.banner-layout {
    height: 100%;
    width: $page-width;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    .banner-row {
        width: 100%;
        height: 400px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;

        .notice-layout {
            width: 37%;
            display: flex;
            height: 100%;

            & > div {
                width: 100%;
            }
        }

        .hub-preview-layout {
            width: 60%;
            height: 100%;
            display: flex;
            flex-direction: column;
            justify-content: flex-end;

            .hub-preview-header {
                background-color: #273447;
                border-bottom: 3px solid #042658;
                h4 {
                    text-align: center;
                    margin-top: 15px;
                    margin-bottom: 15px;
                    color: white;
                }
            }

            .hub-preview-table {
                margin: 0 10px 0 10px;
                flex: 1;
                display: flex;
                flex-direction: column;
                justify-content: space-around;

                .hub-preview-row {
                    padding: 10px 0 0 0;
                    display: flex;
                    flex-direction: row;
                    justify-content: space-around;
                    flex-grow: 1;

                    .hub-preview-paper {
                        flex-grow: 1;
                        flex-basis: 0;
                        margin: 0px 5px 0px 5px;
                        min-height: 90px;

                        .hub-preview-button {
                            width: 100%;
                            height: 100%;
                            background-color: rgba($color: #000000, $alpha: 0.3);
                            display: flex;
                            flex-direction: column;

                            &:hover {
                                background-color: rgba($color: #000000, $alpha: 0.0);
                                -webkit-transition: background-color 200ms linear;
                                -ms-transition: background-color 200ms linear;
                                transition: background-color 200ms linear;
                            }

                            .hub-preview-text {
                                margin-top: 3px;
                                margin-bottom: 3px;
                                font-size: 13px;
                                color: white;
                            }

                            .hub-preview-text:first-child {
                                font-weight: 600;
                                font-size: 15px;
                            }
                        }
                    }
                }
            }
        }
    }
}

.slide-container {
    min-width: $page-width;
    width: 100%;
    background-color: #273447;
}

.comment-background {
    min-width: $page-width;
    width: 100%;
    min-height: 180px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 20px 0 20px 0;

    .comment-container {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        width: $page-width;

        .comment-each {
            flex-grow: 1;
            flex-basis: 0;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            padding-left: 9px;
            padding-right: 9px;
            border-left: white dashed 0.3px;
            
            h2 {
                width: 100%;
                font-weight: 700;
                font-size: 22px;
                color: white;
                text-align: center;
                word-break: keep-all;
                margin-top: 15px;
                margin-bottom: 10px;
            }
        
            h5 {
                font-weight: 50;
                font-size: 17px;
                color: whitesmoke;
                text-align: center;
            }
        }

        .comment-each:first-child {
            border-left: 0;
        }
    }
}

.board-background {
    min-width: $page-width;
    width: 100%;
    display: flex;
    justify-content: center;
}

.board-puple {
    background-color: #f5f6fa;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: #dedfe7;
}

.board-light-puple {
    background-color: #f5f6faa6;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-color: #dedfe7;
}

.board-column-container {
    display: flex;
    justify-content: center;
    align-items: left;
    flex-direction: column;
    width: $page-width;
    padding: 20px 0 30px 0;
}

.board-row-container {
    display: flex;
    justify-content: center;
    align-items: left;
    flex-direction: row;
    width: $page-width;
    padding: 20px 0 30px 0;
}

.board-row-inner-sep {
    & > div {
        border-left: 1px solid #dedfe7;
    }

    & > div:first-child {
        border-left: none;
    }
}

.board-title {
    border-left: 3px solid $header-color;
    padding-left: 10px;
    margin-left: 10px;
}

.board-half {
    width: 50%;
}

.preview-layout {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
}

.menu-card-layout {
    width: 100%;
    padding: 5px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.menu-card-video {
    width: 500px;
    height: 300px;
    margin-right: 20px;
    overflow: hidden;
    position: relative;

    .menu-card-video-thumb {
        background-size: cover;
        background-position: center;
        width: 100%;
        height: 100%;
        transition: all .5s;
    }

    &:hover .menu-card-video-thumb,
    &:focus .menu-card-video-thumb {
        transform: scale(1.2);
    }

    .menu-card-video-overlay {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background: linear-gradient(rgba($color: #000000, $alpha: 0.0), rgba($color: #000000, $alpha: 0.6));
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;

        & > * {
            width: 60px;
            height: 60px;
        }
    };

    .menu-card-video-bottom {
        position: absolute;
        bottom: 15px;
        left: 10px;

        strong {
            font-size: 25px;
            word-break: keep-all;
            color: white;
        }

        span {
            color: white;
        }
    }
}

.menu-card-root {
    width: 300px;
    margin: 10px;
}

.menu-card-title {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.menu-card-media {
    height: 180px;
}

.modal {
    overflow-y: auto;
    scrollbar-width: none;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.modal-content {
    width: 85%;
    display: flex;
    flex-direction: column;

    & > h2 {
        text-align: center;
        color: white;
    }
}

.modal-content:focus {
    outline:none;
}

.modal-section {
    width: 100%;
    display: flex;
    flex-direction: row;
    margin-top: 10px;
    margin-bottom: 10px;
}

.modal-title {
    width: 20%;
    text-align: center;
    color: white;
    font-size: 24px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-right: 1px solid white;
}

.modal-menu {
    width: 80%;
    div {
        justify-content: left !important;
    }
}

.bottom-banner {
    display: block !important;
    position: relative;

    & > .board-column-container {
        position: absolute;
        z-index: 2;
        display: flex;
        left: 50%;
        transform: translate(-50%, 0);
        
        & > div {
            width: $page-width;

        }
    }

    & > .board-banner-container {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        position: relative;
        z-index: 1;

        img {
            width: 80%;
            min-width: $page-width;
        }
    }
}

